# wheel_legged

./: README.md
mujoco_sim/script/: draw.py  wheel_legged_con_sim.py  wheel_legged_sim.py
wheel_legged_common/: CMakeLists.txt  package.xml
wheel_legged_control/: CMakeLists.txt  package.xml
wheel_legged_controllers/: CMakeLists.txt  Wheel_legged_controllers_plugins.xml  package.xml
wheel_legged_controllers/config/: controllers.yaml  joy.yaml
wheel_legged_controllers/config/Wheel_legged_command/: gait.info  reference.info  task.info
wheel_legged_controllers/include/wheel_legged_controllers/: SafetyChecker.h  TargetTrajectoriesPublisher.h  WheelLeggedController.h
wheel_legged_controllers/include/wheel_legged_controllers/visualization/: LeggedSelfCollisionVisualization.h
wheel_legged_controllers/launch/: joy_teleop.launch  load_cheat_controller.launch  load_controller.launch
wheel_legged_controllers/src/: CheatControllerNode.cpp  NormalControllerNode.cpp  TargetTrajectoriesPublisher.cpp  WheelLeggedController.cpp
wheel_legged_description/: CMakeLists.txt  package.xml
wheel_legged_description/config/: joint_names_Wheel_legged_sim.yaml
wheel_legged_description/launch/: display.launch  empty_world.launch  gazebo.launch
wheel_legged_description/meshes_controller/: LB_hip_Link.STL  LB_knee_Link.STL  Labad_Link.STL  Lhip_Link.STL  Lknee_Link.STL  Lwheel_Link.STL  RB_hip_Link.STL  RB_knee_Link.STL  Rabad_Link.STL  Rhip_Link.STL  Rknee_Link.STL  Rwheel_Link.STL  waist_Link.STL
wheel_legged_description/meshes_display/: LB_hip_Link.STL  LB_knee_Link.STL  LF_hip_Link.STL  LF_knee_Link.STL  Labad_Link.STL  Lhip_Link.STL  Lknee_Link.STL  Lwheel_Link.STL  RB_hip_Link.STL  RB_knee_Link.STL  RF_hip_Link.STL  RF_knee_Link.STL  Rabad_Link.STL  Rhip_Link.STL  Rknee_Link.STL  Rwheel_Link.STL  base_link.STL  waist_Link.STL
wheel_legged_description/rviz/: test_rviz.rviz  test_rviz_v1.0.rviz  test_rviz_v2.0.rviz
wheel_legged_description/urdf/: Wheel_legged_display.xml  Wheel_legged_origin.urdf  Wheel_legged_save.urdf  Wheel_legged_sim.urdf  Wheel_legged_sim1.urdf  Wheel_legged_sim2.urdf  wheel_legged_con.xml
wheel_legged_dummy/: CMakeLists.txt  package.xml
wheel_legged_dummy/launch/: legged_robot_sqp.launch  multiplot.launch
wheel_legged_dummy/src/: WheelLeggedRobotDummyNode.cpp  WheelLeggedRobotGaitCommandNode.cpp  WheelLeggedRobotPoseCommandNode.cpp  WheelLeggedRobotSqpMpcNode.cpp
wheel_legged_estimation/: CMakeLists.txt  package.xml
wheel_legged_estimation/include/wheel_legged_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
wheel_legged_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
wheel_legged_hardwares/: CMakeLists.txt  package.xml
wheel_legged_hardwares/EtherCAT/: CMakeLists.txt
wheel_legged_hardwares/EtherCAT/app/: CMakeLists.txt  command.cpp  command.h  config.h  main.cpp  math_ops.c  math_ops.h  motor_control.cpp  motor_control.h  motor_control_dm8006.cpp  motor_control_dm8006.h  motor_control_mf9025.cpp  motor_control_mf9025.h  plot.cpp  plot.h  transmit.cpp  transmit.h
wheel_legged_hardwares/EtherCAT/cpp-readline/: CMakeLists.txt
wheel_legged_hardwares/config/mpc/: task.info
wheel_legged_hardwares/config/multiplot/: mpc_observation.xml  mpc_output.xml
wheel_legged_hardwares/include/wheelleg_hardwares/: hardwares.h  mti_receive_data.h
wheel_legged_hardwares/launch/: bridge.launch  hardwares.launch  multiplot.launch
wheel_legged_hardwares/src/: RosToOcs2_hardwares.cpp  hardwares.cpp  main.cpp  mti_receive_data.cpp
wheel_legged_hardwares/xspublic/xscommon/: threading.cpp
wheel_legged_hardwares/xspublic/xscontroller/: iointerface.h  iprotocolhandler.h  iprotocolmanager.h  xsaccesscontrolmode.h  xscallback.h  xscallbackplainc.h  xsdef.h  xsscanner.h
wheel_legged_hardwares/xspublic/xstypes/: xscontrolline.h  xsdataidentifier.h  xsdatapacket.h  xsdeviceoptionflag.h  xsfile.h  xsmessage.h  xsoption.h  xsportinfo.h  xsresultvalue.h  xsscrdata.h
wheel_legged_interface/: CMakeLists.txt  package.xml
wheel_legged_interface/include/wheel_legged_interface/: LeggedInterface.h  LeggedRobotPreComputation.h  package_path.h.in
wheel_legged_interface/include/wheel_legged_interface/common/: ModelSettings.h  Types.h  utils.h
wheel_legged_interface/include/wheel_legged_interface/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  LeggedSelfCollisionConstraint.h  NormalVelocityConstraintCppAd.h  WheelRollConstraint.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
wheel_legged_interface/include/wheel_legged_interface/cost/: LeggedRobotQuadraticTrackingCost.h
wheel_legged_interface/include/wheel_legged_interface/dynamics/: LeggedRobotDynamicsAD.h
wheel_legged_interface/include/wheel_legged_interface/foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
wheel_legged_interface/include/wheel_legged_interface/gait/: Gait.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
wheel_legged_interface/include/wheel_legged_interface/initialization/: LeggedRobotInitializer.h
wheel_legged_interface/include/wheel_legged_interface/reference_manager/: SwitchedModelReferenceManager.h
wheel_legged_interface/src/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp
wheel_legged_interface/src/common/: ModelSettings.cpp
wheel_legged_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  WheelRollConstraint.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
wheel_legged_interface/src/dynamics/: LeggedRobotDynamicsAD.cpp
wheel_legged_interface/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
wheel_legged_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
wheel_legged_interface/src/initialization/: LeggedRobotInitializer.cpp
wheel_legged_interface/src/reference_manager/: SwitchedModelReferenceManager.cpp
wheel_legged_wbc/: CMakeLists.txt  package.xml
(+19 files in other folders)
