<?xml version="1.0"?>
<package format="2">
    <name>wheel_legged_interface</name>
    <version>0.0.1</version>
    <description>Legged interface base on OCS2</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    
    <depend>ocs2_core</depend>
    <depend>ocs2_oc</depend>
    <depend>ocs2_ddp</depend>
    <depend>ocs2_mpc</depend>
    <depend>ocs2_sqp</depend>
    <depend>ocs2_ipm</depend>
    <depend>ocs2_robotic_assets</depend>
    <depend>ocs2_robotic_tools</depend>
    <depend>ocs2_pinocchio_interface</depend>
    <depend>ocs2_centroidal_model</depend>
    <depend>ocs2_self_collision</depend>
    <depend>pinocchio</depend>

</package>
